Adding Google Authorization API integration

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+</head>
+<body>
+<app-authorization></app-authorization>
 <!-- GooglePay integration example -->
 <app-google-pay [totalPrice]= "69.69"></app-google-pay>
+</body>
+</html>
+
