main-nav component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,9 @@
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-</head>
-<body>
-<app-authorization></app-authorization>
+<app-main-nav></app-main-nav>
+
+
+
+<!-- <app-authorization></app-authorization> -->
 <!-- GooglePay integration example -->
-<app-google-pay [totalPrice]= "69.69"></app-google-pay>
-</body>
-</html>
+<!-- <app-google-pay [totalPrice]= "69.69"></app-google-pay> -->
+
 
