Adding login page and bind with MainNavComponent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<app-main-nav></app-main-nav>
+<!--<app-main-nav></app-main-nav>-->
 
-
+<app-authorization></app-authorization>
 
 <!-- <app-authorization></app-authorization> -->
 <!-- GooglePay integration example -->
