--- a/src/app/authorization/authorization.component.html
+++ b/src/app/authorization/authorization.component.html
@@ -1,34 +1,19 @@
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-</head>
-<body class="bg-light">
-<div class="container">
-  <div class="row py-5 justify-content-center">
-    <div class="col-md-8">
-      <h1 class="text-center py-4">Sign in to OSK App</h1>
-      <div *ngIf="loggedIn===false">
-        <div class="text-center">
-          <button type="button" (click)="signInWithGoogle()" class="btn btn-primary">Sign In With Google</button>
+<div *ngIf="loggedIn===false">
+  <div class="main-div">
+  <mat-card>
+    <mat-card-title class="py-4 px-4">Sign in to OSK App</mat-card-title>
+    <mat-card-content>
+        <div class="text-center py-2">
+          <button type="button" (click)="signInWithGoogle()" class="btn btn-primary">Sign In With Google
+          </button>
         </div>
-      </div>
-      <div *ngIf="loggedIn===true">
-        <div class="form-group">
-          <label for="firstname">First Name</label>
-          <input type="text" class="form-control" id="firstname" [value]="user.firstName" readonly>
-        </div>
-        <div class="form-group">
-          <label for="lastname">Last Name</label>
-          <input type="text" class="form-control" id="lastname" [value]="user.lastName" readonly>
-        </div>
-        <div class="form-group">
-          <label for="email2">Email</label>
-          <input type="text" class="form-control" id="email2" [value]="user.email" readonly>
-        </div>
-        <button type="button" (click)="signOut()" class="btn btn-primary">Sign Out</button>
-      </div>
-    </div>
-  </div>
+    </mat-card-content>
+  </mat-card>
 </div>
-</body>
-</html>
+</div>
+<div *ngIf="loggedIn===true">
+
+  <app-main-nav [authorizedUser]="user"></app-main-nav>
+  <!--<button type="button" (click)="signOut()" class="btn btn-primary">Sign Out</button>-->
+</div>
+
