--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -35,6 +35,12 @@
               Moje konto
             </div>
           </a>
+          <a mat-list-item (click)="signOut()">
+            <mat-icon class="color-text-bright" aria-hidden="false" aria-label="Wyloguj">clear</mat-icon>
+            <div class="ml-2 color-text-bright">
+              Wyloguj
+            </div>
+          </a>
         </mat-nav-list>
         </div>
     </mat-sidenav>
