--- a/src/app/authorization/authorization.component.css
+++ b/src/app/authorization/authorization.component.css
@@ -4,3 +4,15 @@
   justify-content: center;
   align-items: center;
 }
+
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.mat-card {
+  background-color: rgba(255, 255, 255, 0.5);
+}
