--- a/src/app/authorization/authorization.component.html
+++ b/src/app/authorization/authorization.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="loggedIn===false">
+  <img src="osk_background.jpg" class="background" alt="">
   <div class="main-div">
   <mat-card>
     <mat-card-title class="py-4 px-4">Sign in to OSK App</mat-card-title>
@@ -16,4 +17,5 @@
   <app-main-nav [authorizedUser]="user"></app-main-nav>
   <!--<button type="button" (click)="signOut()" class="btn btn-primary">Sign Out</button>-->
 </div>
+
 
