--- a/src/app/authorization/authorization.component.html
+++ b/src/app/authorization/authorization.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="loggedIn===false">
-  <img src="osk_background.jpg" class="background" alt="">
+  <img src="../../assets/image/osk_background.jpg" class="background" alt="">
   <div class="main-div">
   <mat-card>
     <mat-card-title class="py-4 px-4">Sign in to OSK App</mat-card-title>
