Adding courses view

--- a/src/app/google-pay/google-pay.component.html
+++ b/src/app/google-pay/google-pay.component.html
@@ -1,9 +1,9 @@
 <div>
-    <google-pay-button 
-        environment="TEST" 
-        buttonType="buy"
-        buttonColor="black"
-        [paymentRequest]="getPaymentRequest(totalPrice)"
-        (loadpaymentdata)="onLoadPaymentData($event)"
-    ></google-pay-button>
+  <google-pay-button
+    environment="TEST"
+    buttonType="buy"
+    buttonColor="black"
+    [paymentRequest]="getPaymentRequest()"
+    (loadpaymentdata)="onLoadPaymentData($event)"
+  ></google-pay-button>
 </div>
