--- a/src/app/main-nav/all-courses/all-courses.component.html
+++ b/src/app/main-nav/all-courses/all-courses.component.html
@@ -1,1 +1,8 @@
-<h1>Wszystkie kursy - komponent</h1>
+<h1>Dostępne kursy</h1>
+
+<app-course *ngFor="let course of courses"
+            [course]="course">
+</app-course>
+
+
+
