--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -1,65 +1,66 @@
 <mat-sidenav-container class="sidenav-container">
-    <mat-sidenav #drawer class="sidenav background-color-primary" fixedInViewport
-        [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-        [mode]="(isHandset$ | async) ? 'over' : 'side'"
-        [opened]="(isHandset$ | async) === false">
-        <div class="">
-          <mat-toolbar>
-            <div class="color-text-bright" style="width: 100%;">
-              <img class="logo-small-menu" alt="Responsive image" src="assets/image/logo_small.png">
-              <div class="name-info">
-                Cześć {{authorizedUser.firstName}}
-              </div>
-              <div class="mail-info">
-                {{authorizedUser.email}}
-              </div>
-            </div>
-        </mat-toolbar>
-        <mat-divider class="menu-divider"></mat-divider>
-        <mat-nav-list>
-          <a mat-list-item routerLink="/allcourses" href="#">
-            <mat-icon class="color-text-bright" aria-hidden="false" aria-label="Dostępne kursy">account_balance_wallet</mat-icon>
-            <div class="ml-2 color-text-bright">
-              Dostępne kursy
-            </div>
-          </a>
-          <a mat-list-item routerLink="/mycourses">
-            <mat-icon class="color-text-bright" aria-hidden="false" aria-label="Moje kursy">trending_up</mat-icon>
-            <div class="ml-2 color-text-bright">
-              Moje kursy
-            </div>
-          </a>
-          <a mat-list-item>
-            <mat-icon class="color-text-bright" aria-hidden="false" aria-label="Moje konto">people</mat-icon>
-            <div class="ml-2 color-text-bright">
-              Moje konto
-            </div>
-          </a>
-          <a mat-list-item (click)="signOut()">
-            <mat-icon class="color-text-bright" aria-hidden="false" aria-label="Wyloguj">clear</mat-icon>
-            <div class="ml-2 color-text-bright">
-              Wyloguj
-            </div>
-          </a>
-        </mat-nav-list>
+  <mat-sidenav #drawer class="sidenav background-color-primary" fixedInViewport
+               [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+               [mode]="(isHandset$ | async) ? 'over' : 'side'"
+               [opened]="(isHandset$ | async) === false">
+    <div class="">
+      <mat-toolbar>
+        <div class="color-text-bright" style="width: 100%;">
+          <img class="logo-small-menu" alt="Responsive image" src="assets/image/logo_small.png">
+          <div class="name-info">
+            Cześć {{authorizedUser.firstName}}
+          </div>
+          <div class="mail-info">
+            {{authorizedUser.email}}
+          </div>
         </div>
-    </mat-sidenav>
-    <mat-sidenav-content>
-      <mat-toolbar color="white">
-        <button
-          type="button"
-          aria-label="Toggle sidenav"
-          mat-icon-button
-          (click)="drawer.toggle()"
-          *ngIf="isHandset$ | async">
-          <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-        </button>
-        <img class="logo-main-menu" alt="Responsive image" src="assets/image/logo.png">
       </mat-toolbar>
-      <!-- Add Content Here -->
-      <!-- TODO: use angular routing in this place  -->
-      <!-- <app-google-pay></app-google-pay> -->
-      <router-outlet></router-outlet>
-      <!-- Add Content Here -->
-    </mat-sidenav-content>
-  </mat-sidenav-container>
+      <mat-divider class="menu-divider"></mat-divider>
+      <mat-nav-list>
+        <a mat-list-item routerLink="/allcourses" href="#">
+          <mat-icon class="color-text-bright" aria-hidden="false" aria-label="Dostępne kursy">account_balance_wallet
+          </mat-icon>
+          <div class="ml-2 color-text-bright">
+            Dostępne kursy
+          </div>
+        </a>
+        <a mat-list-item routerLink="/mycourses">
+          <mat-icon class="color-text-bright" aria-hidden="false" aria-label="Moje kursy">trending_up</mat-icon>
+          <div class="ml-2 color-text-bright">
+            Moje kursy
+          </div>
+        </a>
+        <a mat-list-item>
+          <mat-icon class="color-text-bright" aria-hidden="false" aria-label="Moje konto">people</mat-icon>
+          <div class="ml-2 color-text-bright">
+            Moje konto
+          </div>
+        </a>
+        <a mat-list-item (click)="signOut()">
+          <mat-icon class="color-text-bright" aria-hidden="false" aria-label="Wyloguj">clear</mat-icon>
+          <div class="ml-2 color-text-bright">
+            Wyloguj
+          </div>
+        </a>
+      </mat-nav-list>
+    </div>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar color="white">
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="drawer.toggle()"
+        *ngIf="isHandset$ | async">
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+      </button>
+      <img class="logo-main-menu" alt="Responsive image" src="assets/image/logo.png">
+    </mat-toolbar>
+    <!-- Add Content Here -->
+    <!-- TODO: use angular routing in this place  -->
+    <!-- <app-google-pay></app-google-pay> -->
+    <router-outlet></router-outlet>
+    <!-- Add Content Here -->
+  </mat-sidenav-content>
+</mat-sidenav-container>
