add calendar component base

--- a/src/app/main-nav/my-course/my-course.component.html
+++ b/src/app/main-nav/my-course/my-course.component.html
@@ -5,4 +5,7 @@
 <a routerLink="{{theoreticalCourse.course.id}}/drivingclasses">
   <button mat-raised-button>Wyświetl wszystkie jazdy</button>
 </a>
+<a routerLink="/theoreticalclasses">
+  <button mat-raised-button>Wyświetl wszystkie terminy zajęć</button>
+</a>
 <hr>
