--- a/src/app/main-nav/course-theoretical-classes/course-theoretical-classes.component.html
+++ b/src/app/main-nav/course-theoretical-classes/course-theoretical-classes.component.html
@@ -1,6 +1,7 @@
 <h1>Terminy zajęć</h1>
 <app-theoretical-class *ngFor="let theoreticalClass of theoreticalClasses"
-                       [theoreticalClass]="theoreticalClass">
+                       [theoreticalClass]="theoreticalClass"
+>
 </app-theoretical-class>
 <a routerLink="/">
   <button mat-raised-button>Importuj do kalendarza</button>
