--- a/src/app/main-nav/my-course/my-course.component.html
+++ b/src/app/main-nav/my-course/my-course.component.html
@@ -5,7 +5,7 @@
 <a routerLink="{{theoreticalCourse.course.id}}/drivingclasses">
   <button mat-raised-button>Wyświetl wszystkie jazdy</button>
 </a>
-<a routerLink="/theoreticalclasses">
+<a routerLink="/theoreticalclasses/{{theoreticalCourse.id}}">
   <button mat-raised-button>Wyświetl wszystkie terminy zajęć</button>
 </a>
 <hr>
