add calendar event link

--- a/src/app/main-nav/theoretical-class/theoretical-class.component.html
+++ b/src/app/main-nav/theoretical-class/theoretical-class.component.html
@@ -1,1 +1,1 @@
-<p>{{theoreticalClass.startTime}}</p>
+<p>{{theoreticalClass.startTime|date:'dd.MM.yyyy'}} godz. {{theoreticalClass.startTime|date:'HH:mm'}}</p>
