--- a/src/app/main-nav/course-theoretical-classes/course-theoretical-classes.component.html
+++ b/src/app/main-nav/course-theoretical-classes/course-theoretical-classes.component.html
@@ -2,12 +2,9 @@
 <app-theoretical-class *ngFor="let theoreticalClass of theoreticalClasses"
                        [theoreticalClass]="theoreticalClass">
 </app-theoretical-class>
-<a>
-  <button mat-raised-button (click)="confirm()">Importuj do kalendarza</button>
-</a>
 <p>
-  <a href="https://calendar.google.com/calendar/u/0/r/eventedit?text=Your+Event+Name&dates=20140127T224000Z/20140320T221500Z&details=For+details,+link+here:+http://www.example.com&location=Waldorf+Astoria,+301+Park+Ave+,+New+York,+NY+10022&sf=true&output=xml"
+  <a href='{{url}}'
     target="_blank">
-    <button mat-raised-button (click)="confirm()">test</button>
+    <button mat-raised-button (click)="confirm()">Importuj do kalendarza</button>
   </a>
 </p>
