some changes in calendar event link

--- a/src/app/main-nav/course-theoretical-classes/course-theoretical-classes.component.html
+++ b/src/app/main-nav/course-theoretical-classes/course-theoretical-classes.component.html
@@ -5,6 +5,7 @@
 <p>
   <a href='{{url}}'
     target="_blank">
-    <button mat-raised-button (click)="confirm()">Importuj do kalendarza</button>
+    <button mat-raised-button>Importuj do kalendarza</button>
   </a>
 </p>
+
