--- a/src/app/main-nav/all-courses/all-courses.component.html
+++ b/src/app/main-nav/all-courses/all-courses.component.html
@@ -1,8 +1,8 @@
-<h1>Dostępne kursy</h1>
-
+<div class="container">
+<h1 class="my-2">Dostępne kursy</h1>
+  <hr>
 <app-course *ngFor="let course of courses"
             [course]="course">
 </app-course>
-
-
+</div>
 
