Adding map component

--- a/src/app/main-nav/driving-class/driving-class.component.html
+++ b/src/app/main-nav/driving-class/driving-class.component.html
@@ -1,5 +1,5 @@
 <p>Data rozpoczęcia: {{drivingClass.startTime}}</p>
 <p>Data zakończenia: {{drivingClass.endTime}}</p>
-<button mat-raised-button>Wyświetl przejechaną trasę</button>
+<button mat-raised-button routerLink="route">Wyświetl przejechaną trasę</button>
 <hr>
 
