improving appearance of my-courses and theorial-courses

--- a/src/app/main-nav/my-courses/my-courses.component.html
+++ b/src/app/main-nav/my-courses/my-courses.component.html
@@ -1,4 +1,6 @@
-<h1>Moje kursy</h1>
+<div class="container">
+<h1 class="py-2">Moje kursy</h1>
 <app-my-course *ngFor="let theoreticalCourse of theoreticalCourses"
                [theoreticalCourse]="theoreticalCourse">
 </app-my-course>
+</div>
