--- a/src/app/main-nav/theoretical-course/theoretical-course.component.html
+++ b/src/app/main-nav/theoretical-course/theoretical-course.component.html
@@ -1,6 +1,10 @@
-<p>Data rozpoczęcia: {{theoreticalCourse.startDate}}</p>
-<app-google-pay [theoreticalCourse]="theoreticalCourse" [customerId]="1"
-></app-google-pay>
-<hr>
+<div class="card shadow mb-1">
+  <div class="card-body">
+    <h3 class="card-title font-weight-bold">Data rozpoczęcia: {{theoreticalCourse.startDate}}</h3>
+    <app-google-pay [theoreticalCourse]="theoreticalCourse" [customerId]="1">
+    </app-google-pay>
+  </div>
+</div>
+
 
 
