--- a/src/app/main-nav/all-courses/all-courses.component.html
+++ b/src/app/main-nav/all-courses/all-courses.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-<h1 class="my-2">Dostępne kursy</h1>
+<h1 class="py-2">Dostępne kursy</h1>
   <hr>
 <app-course *ngFor="let course of courses"
             [course]="course">
