--- a/src/app/main-nav/all-theoretical-courses/all-theoretical-courses.component.html
+++ b/src/app/main-nav/all-theoretical-courses/all-theoretical-courses.component.html
@@ -1,4 +1,6 @@
-<h1>Dostępne kursy teoretyczne</h1>
+<div class="container">
+<h1 class="py-2">Dostępne kursy teoretyczne</h1>
 <app-theoretical-course *ngFor="let theoreticalCourse of theoreticalCourses"
                         [theoreticalCourse]="theoreticalCourse">
 </app-theoretical-course>
+</div>
