some changes - calendar module

--- a/src/app/main-nav/course-theoretical-classes/course-theoretical-classes.component.html
+++ b/src/app/main-nav/course-theoretical-classes/course-theoretical-classes.component.html
@@ -12,4 +12,6 @@
     <button mat-raised-button class="btn btn-primary">Importuj do kalendarza</button>
   </a>
 </p>
+  <hr>
+  <iframe src="https://calendar.google.com/calendar/embed?src=c_ihn5psc6olau6n6g6mm3clta58%40group.calendar.google.com&ctz=Europe%2FWarsaw" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </div>
