Driving class enrollment

--- a/src/app/main-nav/driving-class/driving-class.component.html
+++ b/src/app/main-nav/driving-class/driving-class.component.html
@@ -1,5 +1,10 @@
-<p>Data rozpoczęcia: {{drivingClass.startTime}}</p>
-<p>Data zakończenia: {{drivingClass.endTime}}</p>
-<button mat-raised-button routerLink="{{drivingClass.id}}/route">Wyświetl przejechaną trasę</button>
-<hr>
+<div class="card shadow mb-1">
+  <div class="card-body">
+    <p>Czas rozpoczęcia: {{drivingClass.startTime|date:'dd.MM.yyyy'}} godz. {{drivingClass.startTime|date:'HH:mm'}}</p>
+    <p>Instruktor: {{drivingClass.instructor.firstName}} {{drivingClass.instructor.secondName}}</p>
+    <button mat-raised-button routerLink="{{drivingClass.id}}/route">Wyświetl przejechaną trasę</button>
+  </div>
+</div>
+
+
 
