--- a/src/app/main-nav/theoretical-class/theoretical-class.component.html
+++ b/src/app/main-nav/theoretical-class/theoretical-class.component.html
@@ -1,1 +1,2 @@
-<li>{{theoreticalClass.startTime|date:'dd.MM.yyyy'}} godz. {{theoreticalClass.startTime|date:'HH:mm'}} - {{theoreticalClass.endTime|date:'HH:mm'}}</li>
+<li>{{theoreticalClass.startTime|date:'dd.MM.yyyy'}} godz. {{theoreticalClass.startTime|date:'HH:mm'}}
+  - {{theoreticalClass.endTime|date:'HH:mm'}}</li>
