--- a/src/app/main-nav/course-theoretical-classes/course-theoretical-classes.component.html
+++ b/src/app/main-nav/course-theoretical-classes/course-theoretical-classes.component.html
@@ -1,17 +1,19 @@
 <div class="container">
-<h1 class="py-2">Terminy zajęć</h1>
+  <h1 class="py-2">Terminy zajęć</h1>
   <hr>
-<div class="date-list">
-<app-theoretical-class *ngFor="let theoreticalClass of theoreticalClasses"
-                       [theoreticalClass]="theoreticalClass">
-</app-theoretical-class>
-</div>
-<p class="date-list">
-  <a href='{{url}}'
-    target="_blank">
-    <button mat-raised-button class="btn btn-primary">Importuj do kalendarza</button>
-  </a>
-</p>
+  <div class="date-list">
+    <app-theoretical-class *ngFor="let theoreticalClass of theoreticalClasses"
+                           [theoreticalClass]="theoreticalClass">
+    </app-theoretical-class>
+  </div>
+  <p class="date-list">
+    <a href='{{url}}'
+       target="_blank">
+      <button mat-raised-button class="btn btn-primary">Importuj do kalendarza</button>
+    </a>
+  </p>
   <hr>
-  <iframe src="https://calendar.google.com/calendar/embed?src=c_ihn5psc6olau6n6g6mm3clta58%40group.calendar.google.com&ctz=Europe%2FWarsaw" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+  <iframe
+    src="https://calendar.google.com/calendar/embed?src=c_ihn5psc6olau6n6g6mm3clta58%40group.calendar.google.com&ctz=Europe%2FWarsaw"
+    style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </div>
