Adding personal data

--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -30,7 +30,7 @@
             Moje kursy
           </div>
         </a>
-        <a mat-list-item>
+        <a mat-list-item routerLink="/personaldata">
           <mat-icon class="color-text-bright" aria-hidden="false" aria-label="Moje konto">people</mat-icon>
           <div class="ml-2 color-text-bright">
             Moje konto
