--- a/src/app/main-nav/driving-class/driving-class.component.html
+++ b/src/app/main-nav/driving-class/driving-class.component.html
@@ -3,6 +3,7 @@
     <p>Czas rozpoczęcia: {{drivingClass.startTime|date:'dd.MM.yyyy'}} godz. {{drivingClass.startTime|date:'HH:mm'}}</p>
     <p>Instruktor: {{drivingClass.instructor.firstName}} {{drivingClass.instructor.secondName}}</p>
     <button mat-raised-button routerLink="{{drivingClass.id}}/route">Wyświetl przejechaną trasę</button>
+    <button mat-raised-button routerLink="{{drivingClass.id}}/track-route">Wyznacz przejechaną trasę</button>
   </div>
 </div>
 
